# todo-backend

./: .env.example  .gitignore  Dockerfile  pyproject.toml
core/: constants.py  middlewares.py  mixins.py  schema.py
core/celery_tasks/: tasks.py
core/services/: telegram_client.py
core/services/notifications/: factory.py  overdue_notification.py  reminder_notification.py
project/: celery_app.py  settings.py  urls.py
tasks/: admin.py
tasks/api/v1/: filters.py  urls.py  views.py
tasks/api/v1/serializers/: __init__.py  categories.py  tasks.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_status.py  0004_task_completed_at.py
tasks/models/: __init__.py  categories.py  choices.py  managers.py  tasks.py
tasks/services/tasks/: task_complete.py  task_create.py  task_delete.py  task_update.py
users/: admin.py
users/api/v1/: urls.py  views.py
users/api/v1/serializers/: users.py
users/management/commands/: create_admin.py
users/migrations/: 0001_initial.py
users/models/: managers.py  users.py
users/services/: user_create.py
